--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,23 @@
 spring.application.name=ExpenseTracker
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/java
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/expense_tracker
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=test1234
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
+
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.csrf.enabled=false
 
 #Test for error, to be removed when mapper is implemented
 spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
-
 
 spring:
   jpa:
