--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=ExpenseTracker
 
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/expense_tracker
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/java
 spring.datasource.username=root
-spring.datasource.password=test1234
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.password=password
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
 
 spring.jpa.show-sql=true
