--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/test/**/target/
 project-structure.txt
 shared.application.properties
+src/main/resources/application*.properties
 
 ### STS ###
 .apt_generated
